# MyDocumentations

./: README.md
1. Linux Fundamentals/01. Linux Architecture/: 01.First Steps in Linux.md  02.Linux Architecture.md  03. Kernel Components.md
2. GTest & GMock/: 1- Google Test.md  2- GMock Matchers.md  3- Mocking Classes and Functions.md
2. GTest & GMock/Practice/: 2_TestingforExceptions.cpp  CMakeLists.txt
2. GTest/Practice/: 1_BasicTestCase.cpp
